Fix CSS layout issue.
git-svn-id: https://plugins.svn.wordpress.org/cpd-search/trunk@558315 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/cpd-search-style.css
+++ b/css/cpd-search-style.css
@@ -319,8 +319,6 @@ div.searchform {
 }
 
 #searchformholdingcontainer {
-	position: float;
-	float: left;
 	vertical-align: baseline;
 	padding-top: 10px
 	padding-bottom: 10px;
